Add .gitignore and update to pom file